--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1353,3 +1353,23 @@ Recombination rates vary across the genome and across populations in a way that 
 	pages = {eaaw9206},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/PCAKVFLH/Spence and Song - 2019 - Inference and analysis of population-specific fine.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/3A9CB2U2/eaaw9206.html:text/html}
 }
+
+
+@incollection{dasgupta_mixture_2008,
+	address = {New York, NY},
+	series = {Springer {Texts} in {Statistics}},
+	title = {Mixture {Models} and {Nonparametric} {Deconvolution}},
+	isbn = {978-0-387-75971-5},
+	url = {https://doi.org/10.1007/978-0-387-75971-5_33},
+	language = {en},
+	urldate = {2020-06-15},
+	booktitle = {Asymptotic {Theory} of {Statistics} and {Probability}},
+	publisher = {Springer},
+	author = {DasGupta, Anirban},
+	editor = {DasGupta, Anirban},
+	year = {2008},
+	doi = {10.1007/978-0-387-75971-5_33},
+	keywords = {Finite Mixture, Hellinger Distance, Mixture Model, Moment Estimate, Variance Mixture},
+	pages = {571--591},
+	file = {Springer Full Text PDF:/home/leonardo_iasi/Zotero/storage/99PSBACS/DasGupta - 2008 - Mixture Models and Nonparametric Deconvolution.pdf:application/pdf}
+}
