Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -259,7 +259,7 @@ number of Yoruba (YRI) and Central Europeans from Utah (CEU)
 sequences in the 1000 Genomes project data
 (\cite{the_1000_genomes_project_consortium_global_2015}). Since three
 high coverage Neandertal sequences are available
-(\cite{prufer_complete_2013,prufer_high-coverage_2017}) we choose to
+(\cite{prufer_complete_2013,prufer_high-coverage_2017,mafessoni_high_coverage_2020}) we choose to
 simulate three diploid genomes. For each individual we simulated 20
 chromosomes with a length of 150 Mb each. The mutation rate was set for
 all simulations to \(2*10^{-8}\) per base per generation. The
