Chagyrskaya Neandertal reference

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1373,3 +1373,22 @@ Recombination rates vary across the genome and across populations in a way that 
 	pages = {571--591},
 	file = {Springer Full Text PDF:/home/leonardo_iasi/Zotero/storage/99PSBACS/DasGupta - 2008 - Mixture Models and Nonparametric Deconvolution.pdf:application/pdf}
 }
+
+
+@article{mafessoni_high_coverage_2020,
+	title = {A high-coverage {Neandertal} genome from {Chagyrskaya} {Cave}},
+	copyright = {Copyright © 2020 the Author(s). Published by PNAS.. https://creativecommons.org/licenses/by-nc-nd/4.0/This open access article is distributed under Creative Commons Attribution-NonCommercial-NoDerivatives License 4.0 (CC BY-NC-ND).},
+	issn = {0027-8424, 1091-6490},
+	url = {https://www.pnas.org/content/early/2020/06/15/2004944117},
+	doi = {10.1073/pnas.2004944117},
+	abstract = {We sequenced the genome of a Neandertal from Chagyrskaya Cave in the Altai Mountains, Russia, to 27-fold genomic coverage. We show that this Neandertal was a female and that she was more related to Neandertals in western Eurasia [Prüfer et al., Science 358, 655–658 (2017); Hajdinjak et al., Nature 555, 652–656 (2018)] than to Neandertals who lived earlier in Denisova Cave [Prüfer et al., Nature 505, 43–49 (2014)], which is located about 100 km away. About 12.9\% of the Chagyrskaya genome is spanned by homozygous regions that are between 2.5 and 10 centiMorgans (cM) long. This is consistent with the fact that Siberian Neandertals lived in relatively isolated populations of less than 60 individuals. In contrast, a Neandertal from Europe, a Denisovan from the Altai Mountains, and ancient modern humans seem to have lived in populations of larger sizes. The availability of three Neandertal genomes of high quality allows a view of genetic features that were unique to Neandertals and that are likely to have been at high frequency among them. We find that genes highly expressed in the striatum in the basal ganglia of the brain carry more amino-acid-changing substitutions than genes expressed elsewhere in the brain, suggesting that the striatum may have evolved unique functions in Neandertals.},
+	language = {en},
+	urldate = {2020-06-17},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Mafessoni, Fabrizio and Grote, Steffi and Filippo, Cesare de and Slon, Viviane and Kolobova, Kseniya A. and Viola, Bence and Markin, Sergey V. and Chintalapati, Manjusha and Peyrégne, Stephane and Skov, Laurits and Skoglund, Pontus and Krivoshapkin, Andrey I. and Derevianko, Anatoly P. and Meyer, Matthias and Kelso, Janet and Peter, Benjamin and Prüfer, Kay and Pääbo, Svante},
+	month = jun,
+	year = {2020},
+	pmid = {32546518},
+	keywords = {genetics, genome, human evolution, Neandertals},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/H3MPIEJJ/Mafessoni et al. - 2020 - A high-coverage Neandertal genome from Chagyrskaya.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/IJFDIJ49/2004944117.html:text/html}
+}
